Add a snapshot mechanism, which allows change propagation specifications to access the state of the model repository before the currently to-propagate changes where applied to the source side of change propagation